2011-09-13  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Provide coverage tracing of module initialization
	and shutdown too.  Fix trigger PID typo.
	* test/modules: Add dtrace now that we are unloading and cannot
	rely on module dependency chasing.

2011-09-12  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Introduce quiet mode, producing minimal output.
	* GNUmakefile (check): Run tests in quiet mode.
	(check-verbose): New target providing verbose testing.

2011-09-09  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Stop @@xfail from hanging runtest. Strip trailing
	spaces off the xfail reason.

	* test/intro/rwtime.r.p: Make a !#/usr/bin/sed script.
	Erase C comments. $1 is not meaningful in sed scripts;
	use s// instead.

	* test/act/time.d: Use the same format for date(1) output as
	printf ("%Y") does.
	* test/act/time.r.p: New postprocessor, detect and mark
	identical walltimestamp and date output.
	* test/act/time.r: New, postprocessed results.

	* test/script/syscall.r: Fake results to ensure that result
	comparison fails (this test is known to fail right now).
	* test/struct/spec.r: likewise (though this failure is expected).

	* test/dtrace/error.r: Expected results for error.d.

	* test/vars/clause.d: Strip out pointless linefeeds.
	* test/vars/clause.r: Expected results.
	* test/vars/clause.t: New (fake) trigger, /bin/true as this D
	script runs on its own.
	* test/act/time.t: Likewise.
	* test/dtrace/error.t: Likewise.
	* test/struct/spec.t: Likewise.

	* test/struct/kstat.t: Define this, instead of...
	* test/struct/kstat.d: ... using a $(pidof ...) here, which fails
	unless someone has already started the process.

	Also, mark a lot of tests as XFAIL.

2011-09-09  Shujing Zhao  <pearly.zhao@oracle.com>

	* test/script/tracewrite.d: Adjust: fix copyright date, assign
	trigger.
	* test/script/tracewrite.r: Expected results.

	* test/intro/rwtime.d: Adjust: fix copyright date, assign trigger.