@@ -1,0 +1,14 @@
+                   FUNCTION:NAME
+                      mmap:entry mmap with prot = rw-
+                      mmap:entry mmap with prot = r--
+                      mmap:entry mmap with prot = r-x
+                      mmap:entry mmap with prot = rw-
+                      mmap:entry mmap with prot = rw-
+                      mmap:entry mmap with prot = rw-
+                      mmap:entry mmap with prot = rw-
+                      mmap:entry mmap with prot = rw-
+                      mmap:entry mmap with prot = rw-
+
+
+-- @@stderr --
+dtrace: script 'test/dtrace/begin.d' matched 2 probes
