@@ -1,0 +1,84 @@
+/*
+ * The contents of this file are subject to the terms of the
+ * Common Development and Distribution License, Version 1.0 only
+ * (the "License").  You may not use this file except in compliance
+ * with the License.
+ *
+ * You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
+ * or http://www.opensolaris.org/os/licensing.
+ * See the License for the specific language governing permissions
+ * and limitations under the License.
+ *
+ * When distributing Covered Code, include this CDDL HEADER in each
+ * file and include the License file at usr/src/OPENSOLARIS.LICENSE.
+ * If applicable, add the following below this CDDL HEADER, with the
+ * fields enclosed by brackets "[]" replaced with your own identifying
+ * information: Portions Copyright [yyyy] [name of copyright owner]
+ *
+ * CDDL HEADER END
+ */
+/*
+ * Copyright 2005, 2011 Oracle, Inc.  All rights reserved.
+ * Use is subject to license terms.
+ */
+
+/* A trigger to call mmap. */
+
+#include <stdio.h>
+#include <stdlib.h>
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <unistd.h>
+#include <fcntl.h>
+#include <sys/mman.h>
+
+#define FILEPATH "/tmp/temp"
+#define NUMINTS  (1000)
+#define FILESIZE (NUMINTS * sizeof(int))
+
+int main(int argc, char *argv[])
+{
+    int i;
+    int fd;
+    int result;
+    int *map;
+    struct stat st;
+
+    fd = open(FILEPATH, O_RDWR | O_CREAT | O_TRUNC, (mode_t)0600);
+    if (fd == -1) {
+	perror("Error opening file for writing");
+	exit(EXIT_FAILURE);
+    }
+
+    result = lseek(fd, FILESIZE-1, SEEK_SET);
+    if (result == -1) {
+	close(fd);
+	perror("Error calling lseek() to 'stretch' the file");
+	exit(EXIT_FAILURE);
+    }
+    
+    result = write(fd, "", 1);
+    if (result != 1) {
+	close(fd);
+	perror("Error writing last byte of the file");
+	exit(EXIT_FAILURE);
+    }
+
+    map = mmap(0, FILESIZE, PROT_READ | PROT_WRITE, MAP_SHARED, fd, 0);
+    if (map == MAP_FAILED) {
+	close(fd);
+	perror("Error mmapping the file");
+	exit(EXIT_FAILURE);
+    }
+    
+    for (i = 1; i <=NUMINTS; ++i) {
+	map[i] = 2 * i; 
+    }
+
+    if (munmap(map, FILESIZE) == -1) {
+	perror("Error un-mmapping the file");
+    }
+
+    close(fd);
+    return 0;
+}
