@@ -1,3 +1,12 @@
+2011-09-14  Shujing Zhao  <pearly.zhao@oracle.com>
+
+	* test/dtrace/begin.d: Adjust: fix copyright date, assign trigger. Fix
+	predicate.
+	* test/dtrace/begin.r: Expected results.
+
+	* test/triggers/mmap.c: New trigger to call syscall mmap.
+	* test/triggers/Build (TRIGGERS): Build it.
+
 2011-09-13  Nick Alcock  <nick.alcock@oracle.com>
 
 	* runtest.sh: Provide coverage tracing of module initialization
